--- a/about.css
+++ b/about.css
@@ -187,4 +187,10 @@ overflow: hidden;
     background: linear-gradient(to top, #7083ba,#e0ecff);
 }
 
+.gallery {
+}
 
+.fade-in {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out; /* Smooth fade-in transition */
+}
