--- a/gallery.css
+++ b/gallery.css
@@ -230,3 +230,25 @@ h1 {
 {
 	color: #fff;
 } 
+
+.fadeInText { 
+	animation: fadeIn 5s; 
+	position: absolute;
+	bottom: 10%;
+	right:43%;
+	z-index: 10;
+	animation-fill-mode: forwards;
+	border-top: 1px solid rgba(255, 255, 255, 0.65);
+    border-left: 1px solid rgba(255, 255, 255, 0.65);
+    border-radius: 16px;
+    padding: 20px 20px;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 4px 25px rgba(255, 255, 255, 0.1);
+}
+
+@keyframes fadeIn {
+	0% { opacity: 0; }
+	50% { opacity: 1; }
+	100%{ opacity:0;}
+
+}
