--- a/login.css
+++ b/login.css
@@ -108,161 +108,300 @@ top: 4.5px;
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 *
 {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Poppins', sans-serif;
 }
 body
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-image: url(./img/DSC_1296.jpg);
-    background-size: 100vw 100vh;
-    transition: 1s;
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+background-image: url(./img/DSC_1296.jpg);
+background-size: 100vw 100vh;
+transition: 1s;
 }
 .slide 
 {
-    background-image: url(./img/570af00b68a03a50c269385891c92a23.jpg);
+background-image: url(./img/570af00b68a03a50c269385891c92a23.jpg);
 }
 .container 
 {
-    position: relative;
-    width: 800px;
-    height: 400px;
-    background: rgba(0,0,0,0.125);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+position: relative;
+width: 800px;
+height: 400px;
+background: rgba(0,0,0,0.125);
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .container .box
 {
-    position: relative;
-    width: 50%;
-    height: 100%;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 40px;
+position: relative;
+width: 50%;
+height: 100%;
+z-index: 1000;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+padding: 40px;
 }
 
 .container .box h2
 {
-    color: #fff;
-    font-size: 1.2em;
-    font-weight: 500;
-    margin-bottom: 10px;
+color: #fff;
+font-size: 1.2em;
+font-weight: 500;
+margin-bottom: 10px;
 }
 
 .container .box button
 {
-    cursor: pointer;
-    padding: 10px 20px;
-    background: #fff;
-    color: #333;
-    font-size: 16px;
-    font-weight: 500;
-    border: none;
+cursor: pointer;
+padding: 10px 20px;
+background: #fff;
+color: #333;
+font-size: 16px;
+font-weight: 500;
+border: none;
 }
 .formBx 
 {
-    position: absolute;
-    left: 50px;
-    width: 350px;
-    height: 480px;
-    z-index: 1000;  
-    transition: 0.5s;
-    background: #fff;
-    overflow: hidden;
-    box-shadow: 0 5px 25px rgba(0,0,0,0.15);
-    transition-delay: 0.5s;
+position: absolute;
+left: 50px;
+width: 350px;
+height: 480px;
+z-index: 1000;  
+transition: 0.5s;
+background: #fff;
+overflow: hidden;
+box-shadow: 0 5px 25px rgba(0,0,0,0.15);
+transition-delay: 0.5s;
 }
 .slide .container .formBx
 {
-    left: 400px;
+left: 400px;
 }
 .formBx .form
 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
-    background: #fff;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: 0.5s;
+background: #fff;
 }
 
 .formBx .form.signupForm
 {
-    top: 100%;
-    transition-delay: 0s;
+top: 100%;
+transition-delay: 0s;
 }
 .slide .formBx .form.signupForm
 {
-    transition-delay: 1s;
-    top: 0;
+transition-delay: 1s;
+top: 0;
 }
 .formBx .form.signinForm
 {
-    top: 0;
-    transition-delay: 1s;
+top: 0;
+transition-delay: 1s;
 }
 .slide .formBx .form.signinForm
 {
-    top: -100%;
-    transition-delay: 0s;
+top: -100%;
+transition-delay: 0s;
 }
 
 .formBx .form form 
 {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px;
-    width: 100%;
+display: flex;
+flex-direction: column;
+padding: 0 50px;
+width: 100%;
 }
 .formBx .form form h3 
 {
-    font-size: 1.4em;
-    color: #333;
-    margin-bottom: 20px;
-    font-weight: 600
+font-size: 1.4em;
+color: #333;
+margin-bottom: 20px;
+font-weight: 600
 }
 .formBx .form form input 
 {
-    width: 100%;
-    margin-bottom: 15px;
-    padding: 10px 10px;
-    outline: none;
-    font-size: 16px;
-    border: 1px solid #333;
-    text-transform: uppercase;
-    font-size: 0.8em;
-    letter-spacing: 0.1em;
+width: 100%;
+margin-bottom: 15px;
+padding: 10px 10px;
+outline: none;
+font-size: 16px;
+border: 1px solid #333;
+text-transform: uppercase;
+font-size: 0.8em;
+letter-spacing: 0.1em;
 }
 .formBx form input[type="submit"]
 {
-    background: #03a9f4;
-    border: none;
-    color: #fff;
-    max-width: 100px;
-    cursor: pointer;
-    font-weight: 500;
+background: #03a9f4;
+border: none;
+color: #fff;
+max-width: 100px;
+cursor: pointer;
+font-weight: 500;
 }
 .formBx .signupForm form input[type="submit"]
 {
-    background: #f43648;
+background: #f43648;
 }
 .formBx form a
 {
-    color: #333;
-    letter-spacing: 0.05em;
-    font-size: 0.8em;
+color: #333;
+letter-spacing: 0.05em;
+font-size: 0.8em;
+}
+
+main {
+position: relative;
+height: 100vh;
+width: 100vw;
+overflow: hidden;
+}
+
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Poppins", sans-serif;
+}
+
+.sidebar {
+z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 105px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(17px);
+    --webkit-backdrop-filter: blur(17px);
+    border-right: 1px solid rgba(255, 255, 255, 0.7);
+    transition: width 0.3s ease;
+}
+
+.sidebar:hover {
+    z-index: 999;
+    animation: expandSidebar 0.3s forwards;
+}
+
+@keyframes expandSidebar {
+    from {
+        width: 200px;
+    }
+    to {
+        width: 260px;
+    }
+}
+
+.sidebar .logo {
+    color: #000;
+    display: flex;
+    align-items: center;
+    padding: 25px 10px 15px;
+}
+
+.logo img {
+z-index: 10;
+    width: 80px;
+    border-radius: 50%;
+    animation: cycle 4s infinite;
+}
+
+/* @keyframes cycle {
+0%, 100% { opacity: 0; }
+25% { opacity: 1; }
+} */
+
+.logo h2 {
+    font-size: 1.15rem;
+    font-weight: 600;
+    margin-left: 15px;
+    display: none;
+}
+
+.sidebar:hover .logo h2 {
+    display: block;
+}
+
+.sidebar .links {
+    list-style: none;
+    margin-top: 20px;
+    overflow-y: auto;
+    scrollbar-width: none;
+    height: calc(100% - 140px);
+}
+
+.sidebar .links::-webkit-scrollbar {
+    display: none;
+}
+
+.links li {
+    display: flex;
+    border-radius: 4px;
+    align-items: center;
+}
+
+.links li:hover {
+    cursor: pointer;
+    background: #fff;
+}
+
+.links h4 {
+    color: #222;
+    font-weight: 500;
+    display: none;
+    margin-bottom: 10px;
+}
+
+.sidebar:hover .links h4 {
+    display: block;
+}
+
+.links hr {
+    margin: 10px 8px;
+    border: 1px solid #4c4c4c;
+}
+
+.sidebar:hover .links hr {
+    border-color: transparent;
+}
+
+.links li span {
+    padding: 12px 10px;
+}
+
+.links li a {
+    padding: 10px;
+    color: #000;
+    display: none;
+    font-weight: 500;
+    white-space: nowrap;
+    text-decoration: none;
+}
+
+.sidebar:hover .links li a {
+    display: block;
+}
+
+.links .logout-link {
+    margin-top: 20px;
 }
