--- a/service.css
+++ b/service.css
@@ -270,7 +270,7 @@ width: 129.3%;
     z-index: 10;
     width: fit-content; /* Adjust as needed */
     top: calc(114.5vh - 750px);
-    left: 28px;
+    left: 1px;
 }
 
 
@@ -610,11 +610,15 @@ body {
     justify-content: center;
     max-width: 100%;
     padding: 0 15px;
+    position: absolute;
+    left: 184px;
+    top: calc(140vh - 750px);
 }
+
 
 .card {
     z-index: 9999;
-    width: calc(90% - 20px);
+    width: calc(70% - 20px);
     max-width: 300px;
     border-top: 1px solid rgba(255, 255, 255, 0.65);
     border-left: 1px solid rgba(255, 255, 255, 0.65);
@@ -676,3 +680,141 @@ body {
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
 }
 
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    }
+    
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    }
+    
+    .sidebar {
+    z-index: 4;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 105px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(17px);
+        --webkit-backdrop-filter: blur(17px);
+        border-right: 1px solid rgba(255, 255, 255, 0.7);
+        transition: width 0.3s ease;
+    }
+    
+    .sidebar:hover {
+        z-index: 999;
+        animation: expandSidebar 0.3s forwards;
+    }
+    
+    @keyframes expandSidebar {
+        from {
+            width: 200px;
+        }
+        to {
+            width: 260px;
+        }
+    }
+    
+    .sidebar .logo {
+        color: #000;
+        display: flex;
+        align-items: center;
+        padding: 25px 10px 15px;
+    }
+    
+    .logo img {
+    z-index: 10;
+        width: 80px;
+        border-radius: 50%;
+        animation: cycle 4s infinite;
+    }
+    
+    /* @keyframes cycle {
+    0%, 100% { opacity: 0; }
+    25% { opacity: 1; }
+    } */
+    
+    .logo h2 {
+        font-size: 1.15rem;
+        font-weight: 600;
+        margin-left: 15px;
+        display: none;
+    }
+    
+    .sidebar:hover .logo h2 {
+        display: block;
+    }
+    
+    .sidebar .links {
+        list-style: none;
+        margin-top: 20px;
+        overflow-y: auto;
+        scrollbar-width: none;
+        height: calc(100% - 140px);
+    }
+    
+    .sidebar .links::-webkit-scrollbar {
+        display: none;
+    }
+    
+    .links li {
+        display: flex;
+        border-radius: 4px;
+        align-items: center;
+    }
+    
+    .links li:hover {
+        cursor: pointer;
+        background: #fff;
+    }
+    
+    .links h4 {
+        color: #222;
+        font-weight: 500;
+        display: none;
+        margin-bottom: 10px;
+    }
+    
+    .sidebar:hover .links h4 {
+        display: block;
+    }
+    
+    .links hr {
+        margin: 10px 8px;
+        border: 1px solid #4c4c4c;
+    }
+    
+    .sidebar:hover .links hr {
+        border-color: transparent;
+    }
+    
+    .links li span {
+        padding: 12px 10px;
+    }
+    
+    .links li a {
+        padding: 10px;
+        color: #000;
+        display: none;
+        font-weight: 500;
+        white-space: nowrap;
+        text-decoration: none;
+    }
+    
+    .sidebar:hover .links li a {
+        display: block;
+    }
+    
+    .links .logout-link {
+        margin-top: 20px;
+    }
