--- a/login.css
+++ b/login.css
@@ -125,7 +125,7 @@ transition: 1s;
 }
 .slide 
 {
-background-image: url(./img/570af00b68a03a50c269385891c92a23.jpg);
+background-image: url(./img/wo.jpeg);
 }
 .container 
 {
