--- a/contact.css
+++ b/contact.css
@@ -259,9 +259,9 @@ width: 129.3%;
 .mountain-9 {
     position: absolute;
     z-index: 7;
-    width: 1400px;
-    top: calc(113vh - 750px);
-    left: 85px;
+    width: 600px;
+    top: calc(125vh - 750px);
+    left: 25px;
 }
 
 
@@ -294,8 +294,8 @@ left: 71.18%;
 .text {
 position: absolute;
 z-index: 6;
-top: 15.5%;
-left: 39%;
+top: 6.9%;
+left: 15.2%;
 text-align: center;
 text-transform: uppercase;
 color: #fff;
@@ -304,14 +304,14 @@ pointer-events: auto;
 
 .text h2 {
 font-weight: 100;
-font-size: 6.8rem;
+font-size: 3.1rem;
 line-height: 0.88;
 }
 
 .text h1 {
 font-weight: 800;
 line-height: 0.88;
-font-size: 8.7rem;
+font-size: 5.1rem;
 }
 
 .mountain-6 {
@@ -676,3 +676,195 @@ body {
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
 }
 
+
+section {
+    z-index: 9999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+    width: 100%;
+    overflow-x: hidden;
+    visibility: hidden;
+    opacity: 0;
+    animation: showSection 0s 3s forwards, fadeIn 3s 3s forwards;
+}
+
+@keyframes showSection {
+    to {
+        visibility: visible;
+    }
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
+
+.container
+{
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    padding: 50px;
+    background: rgba(0, 0, 0, 0.55);
+    box-shadow: 0 25px 45px rgba(0,0,0,0.1);
+    border: 1px solid rgba(255, 255, 255, 0.65);
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(25px);
+    border-radius: 10px;
+    z-index: 1;
+    overflow: hidden;
+}
+.container:before
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -40%;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.05);
+    transform: skewX(-15deg);
+    pointer-events: none;
+}
+h2
+{
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+.container .row100
+{
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+}
+.container .row100 .col
+{
+    position: relative;
+    width: 100%;
+    padding: 0 10px;
+    margin: 30px 0 20px;
+    transition: 0.5s;
+}
+.container .row100 .inputBox
+{
+    position: relative;
+    width: 100%;
+    height: 40px;
+    color: #fff;
+}
+.container .row100 .inputBox input,
+.container .row100 .inputBox textarea
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    padding: 0 10px;
+    z-index: 1;
+    color: #000;
+}
+.container .row100 .inputBox .text
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 40px;
+    font-size: 18px;
+    padding: 0 10px;
+    display: block;
+    transition: 0.5s;
+    pointer-events: none;
+}
+.container .row100 .inputBox input:focus + .text,
+.container .row100 .inputBox input:valid + .text
+{
+    top: -35px;
+    left: -10px;
+}
+.container .row100 .inputBox .line
+{
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    transition: 0.5s;
+    border-radius: 2px;
+    pointer-events: none;
+}
+.container .row100 .inputBox input:focus ~ .line,
+.container .row100 .inputBox input:valid ~ .line
+{
+    height: 100%;
+}
+
+.container .row100 .inputBox.textarea
+{
+    position: relative;
+    width: 100%;
+    height: 100px;
+    padding: 10px 0;
+}
+.container .row100 .inputBox textarea
+{
+    height: 100%;
+    resize: none;
+}
+.container .row100 .inputBox textarea:focus ~ .line,
+.container .row100 .inputBox textarea:valid ~ .line
+{
+    height: 100%;
+}
+.container .row100 .inputBox textarea:focus + .text,
+.container .row100 .inputBox textarea:valid + .text
+{
+    top: -35px;
+    left: -10px;
+}
+input[type="submit"]
+{
+    border: none;
+    padding: 10px 40px;
+    cursor: pointer;
+    outline: none;
+    background: #fff;
+    color: #000;
+    font-weight: 600;
+    font-size: 18px;
+    border-radius: 2px;
+}
+
+@media (max-width: 767px)
+{
+    section::before
+    {
+        transform: translate(-200px,-180px);
+    }
+    section::after
+    {
+        transform: translate(220px,180px);
+    }
+    .container
+    {
+        padding: 20px;
+    }
+    h2
+    {
+        font-size: 28px;
+    }
+}
