I really want an ice sword
like i really want an ice sword

--- a/service.css
+++ b/service.css
@@ -259,18 +259,18 @@ width: 129.3%;
 .mountain-9 {
     position: absolute;
     z-index: 7;
-    width: 1400px;
-    top: calc(88vh - 750px);
-    left: -55px;
+    width: 1550px;
+    top: calc(88.5vh - 750px);
+    left: -325px;
 }
 
 
 .mountain-8 {
     position: absolute;
     z-index: 10;
-    width: fit-content; /* Adjust as needed */
-    top: calc(114.5vh - 750px);
-    left: 1px;
+    width: 400px;
+    top: calc(130.95vh - 750px);
+    left: 25px;
 }
 
 
@@ -384,7 +384,7 @@ position: absolute;
 z-index: 18;
 bottom: -1.5%;
 width: 1500px;
-height: 780px;
+height: 784.6px;
 }
 
 .sun-rays {
@@ -604,6 +604,15 @@ body {
     padding: 45px 0;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .cards-container {
     display: flex;
     flex-wrap: wrap;
@@ -611,10 +620,7 @@ body {
     max-width: 100%;
     padding: 0 15px;
     position: absolute;
-    left: 184px;
-    top: calc(140vh - 750px);
 }
-
 
 .card {
     z-index: 9999;
@@ -624,12 +630,16 @@ body {
     border-left: 1px solid rgba(255, 255, 255, 0.65);
     border-radius: 16px;
     padding: 45px 20px;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     box-shadow: 0 4px 25px rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
     margin: 10px;
     box-sizing: border-box;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out 4s forwards;
 }
+
+
 
 .card .wrapper {
     display: flex;
