--- a/gallery.css
+++ b/gallery.css
@@ -220,6 +220,12 @@ h1 {
 	position: relative;
 	padding: 50px 50px 80px 80px;
 	max-width: 550px;
+	border-top: 1px solid rgba(255, 255, 255, 0.65);
+    border-left: 1px solid rgba(255, 255, 255, 0.65);
+    border-radius: 16px;
+    padding: 20px 20px;
+    background: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 25px rgba(255, 255, 255, 0.1);
 }
 .content h2 
 {
