--- a/service.css
+++ b/service.css
@@ -620,6 +620,8 @@ body {
     max-width: 100%;
     padding: 0 15px;
     position: absolute;
+    left: 184px;
+    top: calc(140vh - 750px);
 }
 
 .card {
