--- a/css/styles.css
+++ b/css/styles.css
@@ -261,10 +261,12 @@ img {
 }
 
 .swiper-button-prev {
+  bottom: 90px;
   left: calc(50% - 8rem);
 }
 
 .swiper-button-next {
+  bottom: 90px;
   right: calc(50% - 8rem);
 }
 
@@ -428,4 +430,210 @@ img {
 #myBtn:hover {
   background: #ddd;
   color: black;
+}
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;800&display=swap");
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 100%;
+    padding: 0 15px;
+    position: absolute;
+    left: 245px;
+    top: calc(125vh - 750px);
+}
+
+.card {
+    z-index: 9999;
+    width: calc(100% - 20px);
+    max-width: 300px;
+    border-top: 1px solid rgba(255, 255, 255, 0.65);
+    border-left: 1px solid rgba(255, 255, 255, 0.65);
+    border-radius: 16px;
+    padding: 45px 20px;
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 25px rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    margin: 10px;
+    box-sizing: border-box;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out 0.1s forwards;
+}
+
+
+
+.card .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.profile {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    border: 2px solid rgba(255, 255, 255, 0.3);
+    overflow: hidden;
+}
+
+.profile img {
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper h2 {
+    color: rgba(255, 255, 255, 0.9);
+    letter-spacing: 1.2px;
+    margin-top: 15px;
+    font-size: 1.8rem;
+}
+
+.wrapper p {
+    line-height: 1.6;
+    font-size: 0.9rem;
+    margin: 8px 0;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.wrapper a {
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 1);
+    padding: 10px 35px;
+    border-radius: 50px;
+    margin: 8px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+    color: black;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;800&display=swap");
+
+*,
+*::before,
+*::after {
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+}
+
+body {
+font-family: "Poppins", sans-serif;
+}
+
+::selection {
+background-color: #0b372dbb;
+}
+
+.logo {
+width: 100px;
+}
+
+header {
+position: fixed;
+z-index: 9999;
+width: 100%;
+padding: 0.9rem 0;
+top: 0;
+left: 0;
+border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+header nav {
+max-width: 1400px;
+margin: 0 auto;
+padding: 0 2rem;
+display: flex;
+justify-content: space-between;
+align-items: center;
+display: flex;
+}
+
+header ul {
+list-style: none;
+align-items: center;
+display: flex;
+}
+
+header ul a {
+text-decoration: none;
+color: #fff;
+padding: 0 1.5rem;
+text-transform: uppercase;
+font-weight: 300;
+font-size: 0.83rem;
+}
+
+.search a {
+font-size: 1.05rem;
+padding: 0 3rem;
+}
+
+.hamburger {
+padding-left: 1.5rem;
+}
+
+.hamburger a {
+padding: 0;
+width: 37px;
+height: 37px;
+display: flex;
+border-radius: 50%;
+background-color: rgba(115, 115, 115, 0.7);
+backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
+justify-content: center;
+align-items: center;
+}
+
+.hamburger .bar {
+position: relative;
+width: 52%;
+height: 1.3px;
+background-color: #fff;
+border-radius: 2px;
+}
+
+.hamburger .bar::before,
+.hamburger .bar::after {
+content: "";
+position: absolute;
+left: 50%;
+transform: translateX(-50%);
+width: 60%;
+height: 100%;
+background-color: inherit;
+border-radius: 2px;
+}
+
+.hamburger .bar::before {
+top: -4.5px;
+}
+
+.hamburger .bar::after {
+top: 4.5px;
+}
+
+main {
+position: relative;
+height: 100vh;
+width: 100vw;
+overflow: hidden;
 }
