--- a/login.css
+++ b/login.css
@@ -338,6 +338,15 @@ z-index: 10;
     display: none;
 }
 
+.hide{
+    background: rgba(0, 0, 0, 0.55);
+    box-shadow: 0 25px 45px rgba(0,0,0,0.1);
+    border: 1px solid rgba(255, 255, 255, 0.65);
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(25px);
+}
+
 .sidebar:hover .logo h2 {
     display: block;
 }
