--- a/service.css
+++ b/service.css
@@ -239,12 +239,12 @@ width: 132%;
 }
 
 .mountain-10 {
-    position: absolute;
-    z-index: 3;
-    width: 1800px;
-    top: calc(100% - 900px);
-    left: -200px;
-    overflow-x: hidden;
+position: absolute;
+z-index: 3;
+width: 1800px;
+top: calc(100% - 900px);
+left: -200px;
+overflow-x: hidden;
 }
 
 
@@ -257,20 +257,20 @@ width: 129.3%;
 }
 
 .mountain-9 {
-    position: absolute;
-    z-index: 7;
-    width: 1550px;
-    top: calc(88.5vh - 750px);
-    left: -325px;
+position: absolute;
+z-index: 7;
+width: 1550px;
+top: calc(88.5vh - 750px);
+left: -325px;
 }
 
 
 .mountain-8 {
-    position: absolute;
-    z-index: 10;
-    width: 400px;
-    top: calc(130.95vh - 750px);
-    left: 25px;
+position: absolute;
+z-index: 10;
+width: 400px;
+top: calc(130.95vh - 750px);
+left: 25px;
 }
 
 
@@ -584,249 +584,533 @@ font-size: 2.6rem;
 *,
 *::before,
 *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+font-family: 'Poppins', sans-serif;
 }
 
 body {
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-    overflow-y: hidden; /* Hide vertical scrollbar */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url('bg-pic.jpg');
-    background-size: cover;
-    background-position: center;
-    margin: 0;
-    padding: 45px 0;
+overflow-x: hidden; /* Hide horizontal scrollbar */
+overflow-y: hidden; /* Hide vertical scrollbar */
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+background: url('bg-pic.jpg');
+background-size: cover;
+background-position: center;
+margin: 0;
+padding: 45px 0;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+from {
+opacity: 0;
+}
+to {
+opacity: 1;
+}
 }
 
 .cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 100%;
-    padding: 0 15px;
-    position: absolute;
-    left: 184px;
-    top: calc(140vh - 750px);
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+max-width: 100%;
+padding: 0 15px;
+position: absolute;
+left: 184px;
+top: calc(110vh - 750px);
 }
 
 .card {
-    z-index: 9999;
-    width: calc(70% - 20px);
-    max-width: 300px;
-    border-top: 1px solid rgba(255, 255, 255, 0.65);
-    border-left: 1px solid rgba(255, 255, 255, 0.65);
-    border-radius: 16px;
-    padding: 45px 20px;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 25px rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(5px);
-    margin: 10px;
-    box-sizing: border-box;
-    opacity: 0;
-    animation: fadeIn 1s ease-in-out 4s forwards;
+z-index: 9999;
+width: calc(70% - 20px);
+max-width: 300px;
+border-top: 1px solid rgba(255, 255, 255, 0.65);
+border-left: 1px solid rgba(255, 255, 255, 0.65);
+border-radius: 16px;
+padding: 45px 20px;
+background: rgba(0, 0, 0, 0.2);
+box-shadow: 0 4px 25px rgba(255, 255, 255, 0.1);
+backdrop-filter: blur(5px);
+margin: 10px;
+box-sizing: border-box;
+opacity: 0;
+animation: fadeIn 1s ease-in-out 4s forwards;
 }
 
 
 
 .card .wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
 }
 
 .profile {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    border: 2px solid rgba(255, 255, 255, 0.3);
-    overflow: hidden;
+width: 90px;
+height: 90px;
+border-radius: 50%;
+border: 2px solid rgba(255, 255, 255, 0.3);
+overflow: hidden;
 }
 
 .profile img {
-    width: 100%;
-    height: 100%;
+width: 100%;
+height: 100%;
 }
 
 .wrapper h2 {
-    color: rgba(255, 255, 255, 0.9);
-    letter-spacing: 1.2px;
-    margin-top: 15px;
-    font-size: 1.8rem;
+color: rgba(255, 255, 255, 0.9);
+letter-spacing: 1.2px;
+margin-top: 15px;
+font-size: 1.8rem;
 }
 
 .wrapper p {
-    line-height: 1.6;
-    font-size: 0.9rem;
-    margin: 8px 0;
-    text-align: center;
-    color: rgba(255, 255, 255, 0.9);
+line-height: 1.6;
+font-size: 0.9rem;
+margin: 8px 0;
+text-align: center;
+color: rgba(255, 255, 255, 0.9);
 }
 
 .wrapper a {
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 1);
-    padding: 10px 35px;
-    border-radius: 50px;
-    margin: 8px;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1.4px;
-    color: black;
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
+display: inline-block;
+background-color: rgba(255, 255, 255, 1);
+padding: 10px 35px;
+border-radius: 50px;
+margin: 8px;
+text-align: center;
+text-decoration: none;
+text-transform: uppercase;
+letter-spacing: 1.4px;
+color: black;
+box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
 }
 
 main {
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
+position: relative;
+height: 100vh;
+width: 100vw;
+overflow: hidden;
+}
+
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Poppins", sans-serif;
+}
+
+.sidebar {
+z-index: 4;
+position: fixed;
+top: 0;
+left: 0;
+width: 105px;
+height: 100%;
+display: flex;
+align-items: center;
+flex-direction: column;
+background: rgba(255, 255, 255, 0.2);
+backdrop-filter: blur(17px);
+--webkit-backdrop-filter: blur(17px);
+border-right: 1px solid rgba(255, 255, 255, 0.7);
+transition: width 0.3s ease;
+}
+
+.sidebar:hover {
+z-index: 999;
+animation: expandSidebar 0.3s forwards;
+}
+
+@keyframes expandSidebar {
+from {
+    width: 200px;
+}
+to {
+    width: 260px;
+}
+}
+
+.sidebar .logo {
+color: #000;
+display: flex;
+align-items: center;
+padding: 25px 10px 15px;
+}
+
+.logo img {
+z-index: 10;
+width: 80px;
+border-radius: 50%;
+animation: cycle 4s infinite;
+}
+
+/* @keyframes cycle {
+0%, 100% { opacity: 0; }
+25% { opacity: 1; }
+} */
+
+.logo h2 {
+font-size: 1.15rem;
+font-weight: 600;
+margin-left: 15px;
+display: none;
+}
+
+
+
+.sidebar:hover .logo h2 {
+display: block;
+}
+
+.sidebar .links {
+list-style: none;
+margin-top: 20px;
+overflow-y: auto;
+scrollbar-width: none;
+height: calc(100% - 140px);
+}
+
+.sidebar .links::-webkit-scrollbar {
+display: none;
+}
+
+.links li {
+display: flex;
+border-radius: 4px;
+align-items: center;
+}
+
+.links li:hover {
+cursor: pointer;
+background: #fff;
+}
+
+.links h4 {
+color: #222;
+font-weight: 500;
+display: none;
+margin-bottom: 10px;
+}
+
+.sidebar:hover .links h4 {
+display: block;
+}
+
+.links hr {
+margin: 10px 8px;
+border: 1px solid #4c4c4c;
+}
+
+.sidebar:hover .links hr {
+border-color: transparent;
+}
+
+.links li span {
+padding: 12px 10px;
+}
+
+.links li a {
+padding: 10px;
+color: #000;
+display: none;
+font-weight: 500;
+white-space: nowrap;
+text-decoration: none;
+}
+
+.sidebar:hover .links li a {
+display: block;
+}
+
+.links .logout-link {
+margin-top: 20px;
+}
+
+@media (max-width: 1100px) {
+.text h1 {
+    font-size: 5.8rem;
+}
+
+.text h2 {
+    font-size: 4.7rem;
+}
+}
+
+@media (max-width: 725px) {
+.text h1 {
+    font-size: 5rem;
+    line-height: 1.1;
+}
+
+.text h2 {
+    font-size: 4.1rem;
+    line-height: 1.1;
+}
+
+header nav {
+    padding: 0 1rem;
+}
+
+.logo {
+    width: 75px;
+}
+
+header ul a {
+    font-size: 0.73rem;
+    padding: 0 0.9rem;
+}
+
+.search a {
+    font-size: 0.85rem;
+    padding: 0 1.8rem;
+}
+
+.hamburger {
+    padding-left: 0.9rem;
+}
+
+.hamburger a {
+    height: 30px;
+    width: 30px;
+}
+
+.bg-img {
+    width: initial;
+    height: 208.1%;
+}
+
+.fog-7 {
+    width: initial;
+    height: 146.17%;
+}
+
+.mountain-10 {
+    width: initial;
+    height: 77.59%;
+}
+
+.fog-6 {
+    width: initial;
+    height: 73.11%;
+}
+
+.mountain-9 {
+    height: 87.64%;
+    width: initial;
+}
+
+.mountain-8 {
+    height: 84.33%;
+    width: initial;
+}
+
+.fog-5 {
+    width: initial;
+    height: 54.16%;
+}
+
+.mountain-7 {
+    width: initial;
+    height: 72.26%;
+}
+
+.mountain-6 {
+    width: initial;
+    height: 56.78%;
+}
+
+.fog-4 {
+    width: initial;
+    height: 104.5%;
+}
+
+.mountain-5 {
+    width: initial;
+    height: 60.64%;
+}
+
+.fog-3 {
+    width: initial;
+    height: 90.78%;
+}
+
+.mountain-4 {
+    width: initial;
+    height: 71.42%;
+}
+
+.mountain-3 {
+    width: initial;
+    height: 96.86%;
+}
+
+.fog-2 {
+    width: initial;
+    height: 84.73%;
+}
+
+.mountain-2 {
+    display: none;
+}
+
+.flowers {
+    width: 1000px;
+    height: 100.03%;
+    left: auto;
+    bottom: 0%;
+}
+
+.fog-1 {
+    width: initial;
+    height: 89.86%;
+}
+}
+
+@media (max-width: 520px) {
+.text h1 {
+    font-size: 3.3rem;
+}
+
+.text h2 {
+    font-size: 2.6rem;
+}
+}
+
+@media (max-width: 1100px) {
+    .text h1 {
+        font-size: 5.8rem;
     }
     
-    * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    .text h2 {
+        font-size: 4.7rem;
+    }
     }
     
-    .sidebar {
-    z-index: 4;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 105px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        background: rgba(255, 255, 255, 0.2);
-        backdrop-filter: blur(17px);
-        --webkit-backdrop-filter: blur(17px);
-        border-right: 1px solid rgba(255, 255, 255, 0.7);
-        transition: width 0.3s ease;
+    @media (max-width: 725px) {
+    .text h1 {
+        font-size: 5rem;
+        line-height: 1.1;
     }
     
-    .sidebar:hover {
-        z-index: 999;
-        animation: expandSidebar 0.3s forwards;
+    .text h2 {
+        font-size: 4.1rem;
+        line-height: 1.1;
     }
     
-    @keyframes expandSidebar {
-        from {
-            width: 200px;
-        }
-        to {
-            width: 260px;
-        }
+    header nav {
+        padding: 0 1rem;
     }
     
-    .sidebar .logo {
-        color: #000;
-        display: flex;
-        align-items: center;
-        padding: 25px 10px 15px;
+    .logo {
+        width: 75px;
     }
     
-    .logo img {
-    z-index: 10;
-        width: 80px;
-        border-radius: 50%;
-        animation: cycle 4s infinite;
+    header ul a {
+        font-size: 0.73rem;
+        padding: 0 0.9rem;
     }
     
-    /* @keyframes cycle {
-    0%, 100% { opacity: 0; }
-    25% { opacity: 1; }
-    } */
+    .search a {
+        font-size: 0.85rem;
+        padding: 0 1.8rem;
+    }
     
-    .logo h2 {
-        font-size: 1.15rem;
-        font-weight: 600;
-        margin-left: 15px;
+    .hamburger {
+        padding-left: 0.9rem;
+    }
+    
+    .hamburger a {
+        height: 30px;
+        width: 30px;
+    }
+    
+    .bg-img {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .fog-7 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-10 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .fog-6 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-9 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-8 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .fog-5 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-7 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-6 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .fog-4 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-5 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .fog-3 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-4 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-3 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .fog-2 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
+    
+    .mountain-2 {
         display: none;
     }
     
-    .sidebar:hover .logo h2 {
-        display: block;
+    .flowers {
+        transform: scale(0.5); /* Adjust scale to keep position */
     }
     
-    .sidebar .links {
-        list-style: none;
-        margin-top: 20px;
-        overflow-y: auto;
-        scrollbar-width: none;
-        height: calc(100% - 140px);
+    .fog-1 {
+        transform: scale(0.5); /* Adjust scale to keep position */
+    }
     }
     
-    .sidebar .links::-webkit-scrollbar {
-        display: none;
+    @media (max-width: 520px) {
+    .text h1 {
+        font-size: 3.3rem;
     }
     
-    .links li {
-        display: flex;
-        border-radius: 4px;
-        align-items: center;
+    .text h2 {
+        font-size: 2.6rem;
+    }
     }
     
-    .links li:hover {
-        cursor: pointer;
-        background: #fff;
-    }
-    
-    .links h4 {
-        color: #222;
-        font-weight: 500;
-        display: none;
-        margin-bottom: 10px;
-    }
-    
-    .sidebar:hover .links h4 {
-        display: block;
-    }
-    
-    .links hr {
-        margin: 10px 8px;
-        border: 1px solid #4c4c4c;
-    }
-    
-    .sidebar:hover .links hr {
-        border-color: transparent;
-    }
-    
-    .links li span {
-        padding: 12px 10px;
-    }
-    
-    .links li a {
-        padding: 10px;
-        color: #000;
-        display: none;
-        font-weight: 500;
-        white-space: nowrap;
-        text-decoration: none;
-    }
-    
-    .sidebar:hover .links li a {
-        display: block;
-    }
-    
-    .links .logout-link {
-        margin-top: 20px;
-    }
